--- a/public/admin/less/practice_login.less
+++ b/public/admin/less/practice_login.less
@@ -14,20 +14,25 @@ body{
     justify-content: center;
     align-items: center;
     position: relative;
-    border-radius: 10px;
-    .logo{
+    img{
+        width: 140px;
         position: absolute;
         top: 0;
         transform: translateY(-50%);
-        width: 140px;
-        border:10px solid #fff;
         border-radius: 50%;
+        border: 10px solid #eee;
     }
+
     .form-group{
         width: 450px;
         .btn-login{
             background-color: pink;
-            color:#fff;
+            color: #fff; 
+        }
+        button{
+            // width: 430px;
+            margin-top: 30px;
+            font-size: 14px;
         }
     }
 }
