--- a/public/admin/less/practice_index.less
+++ b/public/admin/less/practice_index.less
@@ -1,33 +1,31 @@
-// 主页主体布局
-#main {
-    display: flex;
+*{
+    padding: 0;
+    margin: 0;
+}
 
+#main{
+    display: flex;
     .left {
         width: 200px;
         height: 100vh;
         background-color: skyblue;
-
-        // logo图片
-        .logo {
+        .logo{
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 250px;
-
-            img {
+            img{
                 width: 140px;
                 height: 140px;
                 border-radius: 50%;
                 border: 10px solid #fff;
                 box-shadow: 0px 0px 2px 2px hotpink;
             }
-
-            p {
+            p{
                 margin-top: 10px;
             }
         }
-
         // 列表组
         .list-group {
             .list-group-item {
@@ -48,7 +46,6 @@
             }
         }
     }
-
     .right {
         flex: 1;
         height: 100vh;
