--- a/public/admin/less/practice_login.css
+++ b/public/admin/less/practice_login.css
@@ -14,15 +14,14 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  border-radius: 10px;
 }
-.form-horizontal .logo {
+.form-horizontal img {
+  width: 140px;
   position: absolute;
   top: 0;
   transform: translateY(-50%);
-  width: 140px;
-  border: 10px solid #fff;
   border-radius: 50%;
+  border: 10px solid #eee;
 }
 .form-horizontal .form-group {
   width: 450px;
@@ -30,4 +29,8 @@ body {
 .form-horizontal .form-group .btn-login {
   background-color: pink;
   color: #fff;
+}
+.form-horizontal .form-group button {
+  margin-top: 30px;
+  font-size: 14px;
 }
