--- a/public/m/less/cart.css
+++ b/public/m/less/cart.css
@@ -1,9 +1,6 @@
 html {
   font-size: 26.66667vw;
 }
-body {
-  font-size: .14rem;
-}
 h1,
 h2,
 h3,
@@ -15,184 +12,169 @@ h6 {
 img {
   vertical-align: middle;
 }
-#header {
+body {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
+  font-size: .14rem;
+  line-height: .14rem;
+}
+#header {
   background-color: #006699;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  display: flex;
+  height: .45rem;
 }
 #header .left {
   width: .45rem;
   height: .45rem;
 }
 #header .left a {
-  display: block;
-  text-align: center;
-  line-height: .45rem;
   color: #fff;
+  height: .45rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #header .center {
   flex: 1;
-  text-align: center;
 }
 #header .center h4 {
-  line-height: .45rem;
-  font-weight: normal;
   color: #fff;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 #header .center form {
   padding-top: .05rem;
 }
 #header .center form input {
   background-color: #fff;
-  height: .35rem;
-  margin-bottom: 0;
-  color: #000;
+  height: 35px;
   text-align: left;
   font-size: .14rem;
+  margin-bottom: 0;
 }
 #header .right {
   width: .45rem;
   height: .45rem;
-  text-align: center;
-  line-height: .45rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #header .right a {
   color: #fff;
 }
-/* 中间的主体区域的样式 这个每个页面都要放到公共样式中 */
 #main {
-  padding: .45rem 0;
-  height: 100vh;
+  flex: 1;
+  overflow: hidden;
+  /* 搜索表单的公共样式 */
 }
 #main .mui-scroll-wrapper {
   position: relative;
   height: 100%;
 }
-#main .swiper-container {
-  height: 100%;
-}
-#main .swiper-container .swiper-slide {
-  height: auto;
-}
-/* 底部区域 */
-#footer {
-  background-color: #006699;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-#footer a {
+#main .search-form {
   display: flex;
-  height: .45rem;
-  color: #fff;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#footer a span {
-  line-height: 1;
-}
-#footer a.active {
-  color: orange;
-}
-/* 搜索表单公共样式 */
-.search-form {
   padding: .1rem;
+  height: .54rem;
 }
-.search-form form {
-  display: flex;
-}
-.search-form form input {
+#main .search-form input {
   flex: 1;
-  height: .36rem;
+  height: .34rem;
   border: 1px solid #006699;
   background-color: #fff;
   text-align: left;
   font-size: .14rem;
-  border-radius: .06rem 0 0 .06rem;
+  border-radius: .06rem 0px 0px .06rem;
   margin-bottom: 0;
 }
-.search-form form button {
+#main .search-form button {
   width: .6rem;
-  height: .36rem;
+  height: .34rem;
+  border-radius: 0 .06rem .06rem 0px;
   background-color: #006699;
   border-color: #006699;
-  border-radius: 0 .06rem .06rem 0;
+  border-left: 0;
 }
-/* 购物车主体商品的样式 */
-#main {
-  padding-bottom: .9rem;
+/* 底部公共的样式 */
+#footer {
+  background-color: #006699;
+  height: .45rem;
 }
-#main .cart-list li a {
+#footer .mui-row > div a {
+  height: .45rem;
+  color: #fff;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-#main .cart-list li a .left {
-  width: 0.8rem;
-  text-align: center;
-  position: relative;
+#footer .mui-row > div a.active {
+  color: orange;
 }
-#main .cart-list li a .left img {
-  width: 100%;
+#footer .mui-row > div a i {
   display: block;
 }
-#main .cart-list li a .left .mui-checkbox {
+#footer .mui-row > div a span {
+  display: block;
+}
+/* 主体区域的样式 */
+#main {
+  /* 购物车列表的样式 */
+}
+#main .cart-list .product .mui-pull-left img {
+  max-width: .8rem;
+  height: .6rem;
+}
+#main .cart-list .product .mui-pull-left .mui-checkbox {
+  text-align: center;
+  margin-top: .1rem;
   position: static;
 }
-#main .cart-list li a .left .mui-checkbox input {
-  left: 50%;
-  transform: translateX(-50%);
-  top: auto;
-  bottom: 0rem;
+#main .cart-list .product .mui-pull-left .mui-checkbox input[type='checkbox'] {
+  position: static;
 }
-#main .cart-list li a .left .mui-checkbox input::before {
-  color: hotpink;
+#main .cart-list .product .mui-pull-left .mui-checkbox input[type='checkbox']::before {
+  font-size: .24rem;
 }
-#main .cart-list li a .right {
-  flex: 1;
+#main .cart-list .product .mui-media-body .product-name {
+  white-space: normal;
+  line-height: .24rem;
+  color: #666;
+}
+#main .cart-list .product .mui-media-body .product-price {
   line-height: .24rem;
 }
-#main .cart-list li a .right .product-name {
-  color: #666;
-}
-#main .cart-list li a .right .product-price {
-  color: #666;
-}
-#main .cart-list li a .right .product-price span {
+#main .cart-list .product .mui-media-body .product-price span {
   color: red;
   font-weight: 600;
 }
-#main .cart-list li a .right .product-params {
+#main .cart-list .product .mui-media-body .product-price del {
+  color: #ccc;
+}
+#main .cart-list .product .mui-media-body .product-params {
   display: flex;
   justify-content: space-between;
+  line-height: .24rem;
 }
-#main .cart-list li a:not(.mui-btn) {
-  white-space: normal;
+#main .cart-list .mui-table-view-cell:after {
+  left: 0;
 }
-/* 购物车订单区域的样式 */
+/* 订单区域的样式 */
 #order {
-  position: fixed;
-  bottom: .45rem;
-  height: .45rem;
-  width: 100%;
-  line-height: .4rem;
   display: flex;
   justify-content: space-between;
-  padding: .05rem;
+  line-height: .34rem;
   background-color: #fff;
+  border-top: 1px solid #ccc;
 }
 #order .order-count {
+  padding-left: .2rem;
   color: red;
-}
-.mui-popup-inner {
-  padding: 0.15rem 0;
-}
-.mui-popup-inner .product-size span {
-  line-height: .33rem;
-}
-.mui-popup-inner .product-size button {
-  margin-bottom: 0.05rem;
+  font-weight: 600;
 }
