--- a/public/m/less/detail.less
+++ b/public/m/less/detail.less
@@ -1,9 +1,15 @@
 @import 'base.less';
-
-/* 详情的主体样式 */
+/* 详情主体部分样式 */
 #main{
-    // 详情列表的样式
-    #detail-list{
+    #slider{
+        img{
+            max-height:3rem;
+        }
+    }
+    .product-detail{
+        .product-name{
+            line-height: .2rem;
+        }
         .product-price{
             span{
                 color:red;
@@ -14,30 +20,40 @@
             }
         }
         .product-size{
-            // 设置左边文字和右边的按钮居中对齐
-            line-height: .33rem;
-            span{
-                .mui-btn{
-                    margin-bottom: .05rem;
-                }
+            line-height: .34rem;
+            .btn-size{
+                margin-bottom: .05rem;
             }
+        }
+        .mui-table-view-cell:after{
+            left: 0;
+            background-color:#ccc;
+        }
+    }
+}
+/* 单独修改商品详情底部样式 */
+#footer {
+    background-color: #ccc;
+
+    .mui-col-xs-2 {
+        a {
+            font-size: .2rem;
+            &::before{
+                color: #666;
+            }
+        }
+    }
+
+    .mui-col-xs-5 {
+        padding: .06rem;
+
+        button {
+            width: 100%;
         }
     }
 }
 
-#footer{
-    background-color: #ccc;
-    .fa-shopping-cart{
-        font-size: 20px;
-        color:#666;
-    }
-    .mui-row{
-        // 给右边2个栅格设置一点间距让按钮居中
-        >.mui-col-xs-5{
-            padding: 0.06rem .05rem;
-            button{
-                width: 100%;
-            }
-        }
-    }
+/* 弹出框的样式 */
+.mui-popup-text{
+    line-height: .3rem;
 }
