--- a/public/m/less/practice_category.css
+++ b/public/m/less/practice_category.css
@@ -120,3 +120,53 @@ img {
 #footer .mui-row > div a span {
   display: block;
 }
+#header .left {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#header .left a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#main {
+  display: flex;
+}
+#main .category-left {
+  width: .8rem;
+}
+#main .category-left .mui-table-view-cell {
+  padding: .15rem;
+}
+#main .category-left .active {
+  background-color: #ccc;
+}
+#main .category-left .mui-table-view-cell:after {
+  left: 0;
+}
+#main .category-right {
+  flex: 1;
+  padding: .1rem;
+}
+#main .category-right a {
+  display: block;
+  background-color: #fff;
+  margin-bottom: .1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#main .category-right a img {
+  width: 100%;
+}
+#main .category-right a p {
+  margin-bottom: 0;
+  line-height: .2rem;
+}
