--- a/public/m/less/practice_index.css
+++ b/public/m/less/practice_index.css
@@ -19,29 +19,79 @@ img {
   vertical-align: middle;
 }
 #header {
-  display: flex;
   background-color: #006699;
-  color: #fff;
-  width: 100%;
-  z-index: 999;
+  display: flex;
+  height: .45rem;
 }
 #header .left {
-  width: 0.45rem;
-  height: 0.45rem;
+  width: .45rem;
+  height: .45rem;
+}
+#header .left a {
+  color: #fff;
+  height: .45rem;
 }
 #header .center {
   flex: 1;
-  text-align: center;
 }
 #header .center h4 {
-  line-height: .45rem;
+  color: #fff;
   font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+#header .center form {
+  padding-top: .05rem;
+}
+#header .center form input {
+  background-color: #fff;
+  height: 35px;
+  text-align: left;
+  font-size: .14rem;
+  margin-bottom: 0;
 }
 #header .right {
-  width: 0.45rem;
-  height: 0.45rem;
-  text-align: center;
-  line-height: .45rem;
+  width: .45rem;
+  height: .45rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#header .right a {
+  color: #fff;
+}
+#main {
+  flex: 1;
+  overflow: hidden;
+}
+#main .mui-scroll-wrapper {
+  position: relative;
+  height: 100%;
+}
+#footer {
+  background-color: #006699;
+  height: .45rem;
+}
+#footer .mui-row > div a {
+  height: .45rem;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#footer .mui-row > div a.active {
+  color: orangered;
+}
+#footer .mui-row > div a i {
+  display: block;
+}
+#footer .mui-row > div a span {
+  display: block;
 }
 #main {
   flex: 1;
@@ -50,25 +100,53 @@ img {
   position: relative;
 }
 #main .nav {
+  padding: .1rem;
+}
+#main .nav a {
+  display: block;
+}
+#main .nav a img {
   width: 100%;
 }
-#main .nav .mui-col-xs-4 a {
-  width: 100%;
-}
-#main .nav .mui-col-xs-4 a img {
-  width: 100%;
-}
-#main .banner .left {
-  height: 240px;
+#main .banner {
+  padding: 0 10px;
 }
 #main .banner .left a {
   display: block;
-  width: 100%;
+  display: flex;
 }
 #main .banner .left a img {
   width: 50%;
 }
-#main .banner .right a {
+#main .banner a {
   display: block;
-  height: 240px;
+}
+#main .banner a img {
+  width: 100%;
+}
+#main .banner .mui-col-xs-8 a img {
+  height: 1.2rem;
+}
+#main .banner .mui-col-xs-4 a img {
+  height: 2.4rem;
+}
+#main .brand,
+#main .sport,
+#main .women,
+#main .man {
+  padding: 10px;
+}
+#main .brand a,
+#main .sport a,
+#main .women a,
+#main .man a {
+  display: block;
+  width: 100%;
+}
+#main .brand a img,
+#main .sport a img,
+#main .women a img,
+#main .man a img {
+  width: 100%;
+  color: #fff;
 }
