--- a/public/m/less/practice_search.css
+++ b/public/m/less/practice_search.css
@@ -120,3 +120,30 @@ img {
 #footer .mui-row > div a span {
   display: block;
 }
+#main {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+#main .search-history {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+#main .search-history .mui-card-header {
+  height: .44rem;
+}
+#main .search-history .mui-card-content {
+  flex: 1;
+}
+#main .search-history .mui-table-view-cell {
+  padding: .15rem;
+}
+#main .search-history .mui-table-view-cell .mui-badge {
+  width: .24rem;
+  height: .24rem;
+  line-height: .18rem;
+}
+#main .search-history .mui-table-view-cell:after {
+  left: 0;
+}
