--- a/public/m/less/search.css
+++ b/public/m/less/search.css
@@ -1,9 +1,6 @@
 html {
   font-size: 26.66667vw;
 }
-body {
-  font-size: .14rem;
-}
 h1,
 h2,
 h3,
@@ -15,145 +12,143 @@ h6 {
 img {
   vertical-align: middle;
 }
-#header {
+body {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
+  font-size: .14rem;
+  line-height: .14rem;
+}
+#header {
   background-color: #006699;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
+  display: flex;
+  height: .45rem;
 }
 #header .left {
   width: .45rem;
   height: .45rem;
 }
 #header .left a {
-  display: block;
-  text-align: center;
-  line-height: .45rem;
   color: #fff;
+  height: .45rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #header .center {
   flex: 1;
-  text-align: center;
 }
 #header .center h4 {
-  line-height: .45rem;
-  font-weight: normal;
   color: #fff;
+  font-weight: normal;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 #header .center form {
   padding-top: .05rem;
 }
 #header .center form input {
   background-color: #fff;
-  height: .35rem;
-  margin-bottom: 0;
-  color: #000;
+  height: 35px;
   text-align: left;
   font-size: .14rem;
+  margin-bottom: 0;
 }
 #header .right {
   width: .45rem;
   height: .45rem;
-  text-align: center;
-  line-height: .45rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 #header .right a {
   color: #fff;
 }
-/* 中间的主体区域的样式 这个每个页面都要放到公共样式中 */
 #main {
-  padding: .45rem 0;
-  height: 100vh;
+  flex: 1;
+  overflow: hidden;
+  /* 搜索表单的公共样式 */
 }
 #main .mui-scroll-wrapper {
   position: relative;
   height: 100%;
 }
-#main .swiper-container {
-  height: 100%;
-}
-#main .swiper-container .swiper-slide {
-  height: auto;
-}
-/* 底部区域 */
-#footer {
-  background-color: #006699;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-}
-#footer a {
+#main .search-form {
   display: flex;
-  height: .45rem;
-  color: #fff;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#footer a span {
-  line-height: 1;
-}
-#footer a.active {
-  color: orange;
-}
-/* 搜索表单公共样式 */
-.search-form {
   padding: .1rem;
+  height: .54rem;
 }
-.search-form form {
-  display: flex;
-}
-.search-form form input {
+#main .search-form input {
   flex: 1;
-  height: .36rem;
+  height: .34rem;
   border: 1px solid #006699;
   background-color: #fff;
   text-align: left;
   font-size: .14rem;
-  border-radius: .06rem 0 0 .06rem;
+  border-radius: .06rem 0px 0px .06rem;
   margin-bottom: 0;
 }
-.search-form form button {
+#main .search-form button {
   width: .6rem;
-  height: .36rem;
+  height: .34rem;
+  border-radius: 0 .06rem .06rem 0px;
   background-color: #006699;
   border-color: #006699;
-  border-radius: 0 .06rem .06rem 0;
-  z-index: 999;
+  border-left: 0;
 }
-/* 搜索页面的主体样式 */
+/* 底部公共的样式 */
+#footer {
+  background-color: #006699;
+  height: .45rem;
+}
+#footer .mui-row > div a {
+  height: .45rem;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#footer .mui-row > div a.active {
+  color: orange;
+}
+#footer .mui-row > div a i {
+  display: block;
+}
+#footer .mui-row > div a span {
+  display: block;
+}
+/* 主体部分的样式 */
 #main {
   background-color: #fff;
+  display: flex;
+  flex-direction: column;
   /* 搜索历史的样式 */
 }
-#main .search-history .title {
-  padding: .1rem;
+#main .search-history {
+  flex: 1;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  box-shadow: 0px 0px 2px #666;
-  border-radius: .06rem .06rem 0 0;
+  flex-direction: column;
 }
-#main .search-history .title a {
-  color: #666;
+#main .search-history .mui-card-header {
+  height: .44rem;
 }
-#main .search-history .content {
-  box-shadow: 0px 0px 2px #666;
-  border-radius: 0 0 .06rem .06rem;
+#main .search-history .mui-card-content {
+  flex: 1;
 }
-#main .search-history .content .mui-table-view-cell:after {
-  left: 0;
+#main .search-history .mui-table-view-cell {
+  padding: .15rem;
 }
-#main .search-history .mui-card-header span {
-  font-size: .14rem;
+#main .search-history .mui-table-view-cell .mui-badge {
+  width: .24rem;
+  height: .24rem;
+  line-height: .18rem;
 }
-#main .search-history .mui-card-header a {
-  font-size: .14rem;
-  color: #666;
-}
-#main .search-history .mui-card-header .mui-table-view-cell:after {
+#main .search-history .mui-table-view-cell:after {
   left: 0;
 }
